# ie691_ir_project

./: README.md  Translation API.ipynb  pyproject.toml
T1_sentence_transformers/: data_preparation.py  evaluation.py  main.py  retrieval.py  sbert_embedding.py
baselines/: BM25.ipynb  BM25_.ipynb  LMIR-100K.ipynb  LMIR.ipynb  README.md  README_TF-IDF,BM25.md  Readme_LMIR,LMIR-100k.md  TF-IDF-based retrieval model.ipynb  TF-IDF.ipynb  Translation API.ipynb  translated_queries.xlsx
explore/: avg_doc_length.py  explore.ipynb  explore_head_counts.py  funcs.py  samp_query.py
m3_sentence_transformer/: README.md  chroma.ipynb  chroma.py  data_sampler.py  duplicate_chroma.py.ipynb  evaluation_weaviate.ipynb  m3embeddings.ipynb  preprocessing.py  weaveate_db.ipynb  weaveate_db.py  weaveate_db_sampling.ipynb  weaveate_setup.ipynb  weaviate_db_sample.py  weaviate_db_sample_colbert.py
m3_sentence_transformer/misc/: average_title_length.ipynb  chroma.ipynb  chroma.py  duplicate_chroma.py.ipynb  evaluation.ipynb  weaveate_db.ipynb  weaveate_db.py  weaveate_db_sampling.ipynb
sbert_sentence_transformer/: README.md  data_preparation.py  evaluation.py  read_me.md  retrieval.py  sbert_embedding.py
sentence_transformers/: m3embeddings.ipynb
weaviate/: docker-compose.yml
