[tool.poetry]
name = "ie691-ir-project"
version = "0.1.0"
description = ""
authors = ["Yannik Hahn <yannik@h4hn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ir-datasets = "^0.5.8"
pandas = "^2.2.3"
notebook = "^7.2.2"
torch = "^2.5.1"
sentence-transformers = "^3.2.1"
ipywidgets = "^8.1.5"
widgetsnbextension = "^4.0.13"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
