[tool.poetry]
name = "ie691-ir-project"
version = "0.1.0"
description = ""
authors = ["Yannik Hahn <yannik@h4hn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ir-datasets = "^0.5.8"
pandas = "^2.2.3"
notebook = "^7.2.2"
torch = "^2.5.1"
sentence-transformers = "^3.2.1"
ipywidgets = "^8.1.5"
widgetsnbextension = "^4.0.13"
jupyter = "^1.1.1"
ir-measures = {extras = ["cwl-eval"], version = "^0.3.4"}
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
flagembedding = "^1.3.2"
nltk = "^3.9.1"
pymystem3 = "^0.2.0"
chromadb = "^0.5.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
